Issue #21488: Add support of keyword arguments for codecs.encode and codecs.decode